BO: Fix z-index to display navigation over the header in new theme

--- a/admin-dev/themes/new-theme/scss/components/layout/_main_header.scss
+++ b/admin-dev/themes/new-theme/scss/components/layout/_main_header.scss
@@ -1,6 +1,6 @@
 .main-header {
   position: fixed;
-  z-index: 502;
+  z-index: 503;
   background: $white;
   height: $size-header-height;
   width: 100%;
